# sose2026-dis22-movie-chatbot

./: .gitignore  README.md  justfile  pyproject.toml
meilensteine/: 01_meilenstein.md  02_meilenstein.md  03_meilenstein.md
notebooks/: embeddings.py  intro_llms.py  prompt_engineering.py  rag.py  retrieval_strategies.py
slides/: architektur.excalidraw
src/: chatbot.py
src/llm/: dummy_llm.py  llm_interface.py
